fix: trash button visibility logic

--- a/src/blocks/element/__trash/element__trash.css
+++ b/src/blocks/element/__trash/element__trash.css
@@ -26,8 +26,8 @@
     position: absolute;
     top: 18px;
     right: 15px;
-    visibility: visible;
-    opacity: 1;
+    visibility: hidden;
+    opacity: 0;
 }
 
 .element__trash:active {
